# docker_django_postgres_template

./: .env_example  .gitignore  LICENSE  Procfile  README.md  commits-info.txt  django_init.py  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.production.proxy.yml  docker-compose.production.yml  docker-compose.traefik.yml  docker-compose.yml  generate_requirements_txts.bat  init.py  pyproject.toml  requirements-dev.txt  requirements.development.txt  requirements.production.txt  requirements.txt  start_project.py  useful-commands.txt  useful-information.txt  useful_information.txt
.envs/: README.md
.envs/development/: .django  .postgres
.envs/production/: .django  .nginx_proxy  .postgres
apps/account/: __init__.py  views.py
apps/main/: models.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
django_template/account/: urls.py
django_template/main/: __init__.py  urls.py
docker/: Dockerfile  docker-compose.nginx-proxy.yml  entrypoint.sh  nginx.conf
scripts/: generate_requirements_text_files.bat  start_project.py
tests/: test_django_template.py
www/django/: .flake8  pyproject.toml  requirements.development.txt  requirements.txt
www/django/src/templates_django/: manage.py
www/django/src/templates_django/config/: urls.py
www/django/src/templates_django/config/settings/: base.py  development.py  production.py
www/django/src/templates_django/templates_django/account/: __init__.py  apps.py
www/django/src/templates_django/templates_django/account/alternative user models/: README.md
www/django/src/templates_django/templates_django/account/alternative user models/Log in with email address/No username field/: admin.py  models.py
www/django/src/templates_django/templates_django/account/alternative user models/Log in with email address/Username field/: models.py
www/django/src/templates_django/templates_django/account/alternative user models/Username is not case sensitive/: forms.py  models.py
www/django/src/templates_django/templates_django/account/migrations/: 0001_initial.py
www/django/src/templates_django/templates_django/account/templates/account/: logged_out.html  password_change_form.html  register.html
www/django/src/templates_django/templates_django/core/: __init__.py  apps.py  models.py  tests.py  views.py
www/django/src/templates_django/templates_django/templates/: 403.html  _base.html
(+115 files in other folders)
