[tool.poetry]
name = "django_template"
version = "0.2.0"
description = "A basic docker ready django template that includes several alternate user model implementations"
authors = ["Emily <12156026+emilyjt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.8"
argon2-cffi = "^20.1.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
