[tool.poetry]
name = "django_template"
version = "0.3.0"
description = "A basic docker ready django template that includes several alternate user model implementations"
authors = ["Emily <12156026+emilyjt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
argon2-cffi = "^20.1.0"
gunicorn = "^20.0.4"
Pillow = "^8.1.0"
django-lifecycle = "^0.9.0"
psycopg2-binary = "^2.8.6"
django-redis = "^4.12.1"

[tool.poetry.dev-dependencies]
black = "flake8"
flake8 = "^3.8.4"
django-debug-toolbar = "^3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
